# homodgcat_parser

./: .env.example  .gitignore  dialog-parse.py  dialog-tl.py  dialog_diff.py  dialog_parse.py  dialog_process.py  dialog_tl.py  localization.json  pyproject.toml  text-parse.py  text-versions.example.json  text_diff.py  text_parse.py  text_process.py  text_versions.example.json  utils.py
